--- a/packages/aws-appsync/package.json
+++ b/packages/aws-appsync/package.json
@@ -27,6 +27,7 @@
     "paho-client": "^1.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "rfc6902": "^2.2.2",
     "setimmediate": "^1.0.5",
     "url": "^0.11.0"
   },
