--- a/packages/aws-appsync/package.json
+++ b/packages/aws-appsync/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-appsync",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "main": "lib/index.js",
   "license": "SEE LICENSE IN LICENSE",
   "description": "AWS Mobile AppSync SDK for JavaScript",
@@ -24,7 +24,7 @@
     "apollo-link-http": "^1.0.0",
     "aws-sdk": "^2.139.0",
     "graphql": "^0.11.7",
-    "paho-client": "^1.0.1",
+    "paho-mqtt": "^1.0.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "setimmediate": "^1.0.5",
