--- a/packages/aws-appsync/package.json
+++ b/packages/aws-appsync/package.json
@@ -16,6 +16,7 @@
     "prepare": "tsc"
   },
   "dependencies": {
+    "@manueliglesias/paho-mqtt": "1.0.x",
     "@redux-offline/redux-offline": "^2.2.1",
     "apollo-cache-inmemory": "^1.0.0",
     "apollo-client": "2.2.6",
@@ -24,7 +25,6 @@
     "apollo-link-http": "^1.0.0",
     "aws-sdk": "^2.139.0",
     "graphql": "^0.11.7",
-    "paho-client": "^1.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "setimmediate": "^1.0.5",
