--- a/packages/aws-appsync/package.json
+++ b/packages/aws-appsync/package.json
@@ -42,6 +42,7 @@
     "apollo-link-http": "^1.0.0",
     "aws-sdk": "^2.139.0",
     "graphql": "^0.11.7",
+    "localforage": "^1.7.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "setimmediate": "^1.0.5",
